@@ -65,3 +65,6 @@ java --module-path "C:\javafx-sdk\lib" --add-modules javafx.controls,javafx.fxml
 - Typing indicator while waiting
 - Reset button to clear conversation
 - Runs as a desktop app
+
+``` bash
+--module-path "C:\javafx-sdk\lib" --add-modules javafx.controls,javafx.base,javafx.graphics,javafx.fxml
